--- a/environment.yml
+++ b/environment.yml
@@ -10,3 +10,9 @@ dependencies:
   - ipympl
   - xleaflet=0.11.1
   - xeus-cling>=0.9
+  - Watermark=2.0.2
+  - pandas=1.1.4
+  - numpy=1.19.4
+  - ipywidgets=7.5.1
+  - plotly=4.12.0
+
